gen/discovery/v1/cargo-errors.log
    Checking google-discovery1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/discovery/v1/lib)
error[E0072]: recursive type `schemas::JsonSchema` has infinite size
   --> discovery/v1/lib/src/lib.rs:216:5
    |
216 |     pub struct JsonSchema {
    |     ^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
219 |         pub additional_properties: ::std::option::Option<crate::schemas::JsonSchema>,
    |         ---------------------------------------------------------------------------- recursive without indirection
...
240 |         pub items: ::std::option::Option<crate::schemas::JsonSchema>,
    |         ------------------------------------------------------------ recursive without indirection
    |
    = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::JsonSchema` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
error: Could not compile `google-discovery1`.

To learn more, run the command again with --verbose.
